Feature/cambiar controlador main (#261)
Este Merge conlleva:

- MainController: Se ha cambiado el HashMap por un TreeMap, de esta manera los géneros siempre están por orden.
- MainController: Se ha comentado el código pero hay que darle una vuelta.

- CommonCss: Se ha quitado el 80% width de la barra de busqueda, la rompe y sin este atributo está perfecta.

- InsercionesSql: Había un id que no existía y no permitía insertar Playlists